About.html cont.
Continued to work on the About page. Also added a favicon for the web
page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,8 @@
     <meta name="author" content="Brycon Carpenter">
 
     <title>Brycon Carpenter Personal Portfolio</title>
+    
+    <link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
