--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,44 +4,61 @@
     {% include head.html %}
     <body id="page-top">
         {% include nav.html %}
-        <section class="bg-primary" id="about">
-            <div class="container">
-                <div class="row">
+        {% include about_header.html %}
+        <div class="container">
+            <section id="resume">
+                <section class="resume-section">
+                    <h2 class="section-heading">Education</h2>
+                    <div class="row">
+                        <p class="col-lg-4">2013-2017</p>
+                        <div class="col-lg-8"><a href="http://www.appstate.edu/about/">Appalachian State University</a> <span class="pull-right">Cumulative GPA: 3.95</span><br>
+                            Bachelor of Science in Computer Science <span class="pull-right">Major GPA: 4.00</span><br>
+                            Minors: Film Studies, Mathematics<br><br>
 
-                    <div class="col-lg-12 text-left">
-                        <h2 class="section-heading">Brycon Carpenter</h2> <br>
-                    </div>
-                    <div class ="col-lg-8 col-sm-12 console-top text-left">
-                        @Brycon_Carpenter
-                        <div class="console">
-                            <p>% BryconC.interests<br>
-                                &nbsp;&nbsp; ["Gaming", "Film", "Cars", "Programming"]</p>
-                            <p>% BryconC.homeTown<br>
-                                &nbsp;&nbsp; "Niles, Michigan"</p>
-                            <p>% BryconC.education<br>
-                                &nbsp;&nbsp; "Appalachian State University, Boone, NC"</p>
-                            <p>% BryconC.fieldOfStudy<br>
-                                &nbsp;&nbsp; "Computer Science"</p>
-                            <p>% BryconC.expectedGraduation<br>
-                                &nbsp;&nbsp; "May 2017"</p>
-                            <br>
+                            <h4>Highlighted Courses</h4>
+                            <ul>
+                                <li>Client- and Server-side Web Programming</li>
+                                <li>Computer Systems I & II</li>
+                                <li>Cybersecurity Fundamentals</li>
+                                <li>Linear Algebra</li>
+                                <li>Software Engineering</li>
+                            </ul>
                         </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-12">
-                        <img style="float:right" class="img-rounded" src="img/personal/profile_pic.jpg" alt="Picture of me." height="450" width="266">
-                    </div>
-                    <div class="clearfix"></div>
 
-
-                    <div class="col-lg-6">
-                        <hr class="light">
-                        <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                        <a href="#" class="btn btn-default btn-xl">Get Started!</a>
                     </div>
-                </div>
-            </div>
-        </section>
-        <link href="../css/about.css" rel="stylesheet" type="text/css"/>
+                </section>
+                <section class="resume-section">
+                    <h2 class="section-heading">Experience</h2>
+                    <div class="row">
+                        <p class="col-lg-4">2014-present</p>
+                        <div class="col-lg-8"><strong>ST Instructional Assistant</strong>, <a href="http://compsci.appstate.edu/">Appalachian State University Computer Science Department</a> <br>
+                            <em>Courses: Introduction to Computer Systems, Software Engineering</em>
+
+                            <ul>
+                                <li>Collaborated with course professor to refine assignments to best represent material and appeal to student learning styles</li>
+                                <li>Critiqued student submitted material, and provided examples of implemented concepts</li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </section>
+            </section>
+        </div>
+        <div class="container">
+            <br>
+            <h2 class="section-heading">Computer Science Through Gaming</h2>
+            <p class="text-muted">My experience with computer science really began as a gamer. With my first gaming console being the GameBoy Color,
+                I slowly accumulated more and more gaming experience, rising up the ladder of consoles (N64, PS2, GBC, DS, Xbox 360, PS3, Xbox One). Somewhere along
+                the way I was introduced to PC gaming and MMOs. My all time favorite MMO became RuneScape when I started playing in 2002. 
+            </p>
+
+            <p class="text-muted">Then when I was around 10 I found RuneScape private servers, copies of Runescape servers written in Java that were able
+                to be modified and played locally. This is where I first fell in love with programming, being able to control my favorite
+                game within lines of code. Of course, starting out I had absolutely no idea what I was doing and basically just mimicked 
+                the existing code structures. Later, I began to understand these structures and the language itself, opening the door for the field of Computer Science.
+            </p>
+        </div>
+
         {% include scripts.html %}
     </body>
 
