--- a/css/about.css
+++ b/css/about.css
@@ -14,11 +14,22 @@ and open the template in the editor.
     padding-left: 0;
     padding-right: 0;
     text-align: center;
+    font-family: Arial, monospace;
+    color: black;
+    font-size: 16px;
 }
 
 .console {
     padding: 40px;
     background-color: #383737;
     text-align: left;
+    font-size: 12px;
+    color: white;
+}
+
+.resume-section {
+    padding: 5px;
+    border: .5px black solid;
+    border-collapse: collapse;
 }
 
