--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,7 +18,7 @@
                     <a class="page-scroll" href="about.html">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">Services</a>
+                    <a class="page-scroll" href="projects.html">Projects</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#portfolio">Portfolio</a>
