--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,22 +1,23 @@
 <section class="no-padding" id="portfolio">
-    <div class="container-fluid">
+    <div class="container">
+        <h2 class="section-heading"><br><br>Projects</h2>
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/Bryconc/Spotify-Playlist-Sampler" class="portfolio-box">
+                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="Spotify Playlist Sampler image">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Spotify Playlist Sampler
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Python
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-sm-6">
+            <!--<div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
                     <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
@@ -91,6 +92,7 @@
                     </div>
                 </a>
             </div>
+			-->
         </div>
     </div>
 </section>
