Project page: Last Quest
Added Last Quest to Project page

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -17,6 +17,21 @@
                     </div>
                 </a>
             </div>
+			<div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/Bryconc/Last-Quest-Text-Game" class="portfolio-box">
+                    <img src="img/portfolio/2.jpg" class="img-responsive" alt="Last Quest Text Game image">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Last Quest Text Adventure Game
+                            </div>
+                            <div class="project-name">
+                                Java
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
             <!--<div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
                     <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
