--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,4 +1,4 @@
-<section class="no-padding" id="portfolio">
+<section class="no-padding">
     <div class="container">
         <h2 class="section-heading"><br><br>Projects</h2>
         <div class="row no-gutter">
@@ -17,7 +17,7 @@
                     </div>
                 </a>
             </div>
-			<div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/Bryconc/Last-Quest-Text-Game" class="portfolio-box">
                     <img src="img/portfolio/2.jpg" class="img-responsive" alt="Last Quest Text Game image">
                     <div class="portfolio-box-caption">
@@ -32,82 +32,42 @@
                     </div>
                 </a>
             </div>
-            <!--<div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/Bryconc/CaptionMyImage" class="portfolio-box">
+                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="CaptionMyImage Website image">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Caption My Image Web Project
                             </div>
                             <div class="project-name">
-                                Project Name
+                                HTML, CSS, JS, PHP
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
+        </div>
+    </div>
+    <div class="container">
+        <h2 class="section-heading"><br><br>Scripts</h2>
+        <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/Bryconc/Floating-Point-Converter" class="portfolio-box">
+                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="Floating Point Converter image">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Floating Point Conversion Script
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Python
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-			-->
+            
         </div>
     </div>
 </section>
