Blog Post Addition
Blog Post functionality added to my web portfolio. Also reconfigured
sites to use Jekylls permalink system

--- a/_includes/about_header.html
+++ b/_includes/about_header.html
@@ -24,10 +24,10 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                <img class="img-rounded pull-right" src="img/personal/profile_pic.jpg" alt="Picture of me." height="450" width="266">
+                <img class="img-rounded pull-right" src="/img/personal/profile_pic.jpg" alt="Picture of me." height="450" width="266">
             </div>
             <div class="clearfix"></div>
         </div>
     </div>
-    <link href="../css/about.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/about.css" rel="stylesheet" type="text/css"/>
 </section>
