--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <h1>Personal Portfolio: Brycon Carpenter</h1>
             <hr>
             <p>Welcome to my site! Here I'll keep you updated on my past projects and activities.</p>
-            <a href="about.html" class="btn btn-primary btn-xl page-scroll">Learn About Me</a>
+            <a href="{{site.baseurl}}/about/" class="btn btn-primary btn-xl page-scroll">Learn About Me</a>
         </div>
     </div>
 </header>
