--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -70,7 +70,7 @@
         <section class="resume-section">
             <h2 class="section-heading">Projects</h2>
             <p class="text-center">
-                Visit my <a href="projects.html">projects page</a> to learn more about my specific projects
+                Visit my <a href="{{site.baseurl}}/projects/">projects page</a> to learn more about my specific projects
             </p>
             
         </section>
