--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -4,7 +4,7 @@
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/Bryconc/Spotify-Playlist-Sampler" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="Spotify Playlist Sampler image">
+                    <img src="{{site.baseurl}}/img/portfolio/1.jpg" class="img-responsive" alt="Spotify Playlist Sampler image">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -19,7 +19,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/Bryconc/Last-Quest-Text-Game" class="portfolio-box">
-                    <img src="img/portfolio/2.jpg" class="img-responsive" alt="Last Quest Text Game image">
+                    <img src="{{site.baseurl}}/img/portfolio/2.jpg" class="img-responsive" alt="Last Quest Text Game image">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -34,7 +34,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/Bryconc/CaptionMyImage" class="portfolio-box">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="CaptionMyImage Website image">
+                    <img src="{{site.baseurl}}/img/portfolio/4.jpg" class="img-responsive" alt="CaptionMyImage Website image">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -54,7 +54,7 @@
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/Bryconc/Floating-Point-Converter" class="portfolio-box">
-                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="Floating Point Converter image">
+                    <img src="{{site.baseurl}}/img/portfolio/3.jpg" class="img-responsive" alt="Floating Point Converter image">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
