Resume Update and Sunergy Project Upload
Resume Updated to be consistent with Oct 2016 Resume. Project page
updated to include Team Sunergy Project.

--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -6,7 +6,7 @@
                 <p class="col-lg-4">2013-2017</p>
                 <div class="col-lg-8"><a href="http://www.appstate.edu/about/">Appalachian State University</a> <span class="pull-right">Cumulative GPA: 3.95</span><br>
                     Bachelor of Science in Computer Science <span class="pull-right">Major GPA: 4.00</span><br>
-                    Minors: Film Studies, Mathematics<br><br>
+                    Minor: Film Studies<br><br>
 
                     <h4>Highlighted Courses</h4>
                     <ul>
@@ -15,6 +15,7 @@
                         <li>Cybersecurity Fundamentals</li>
                         <li>Linear Algebra</li>
                         <li>Software Engineering</li>
+                        <li>Mobile Device Programming</li>
                     </ul>
                 </div>
 
@@ -25,15 +26,26 @@
             <div class="row">
                 <p class="col-lg-4">2014-present</p>
                 <div class="col-lg-8"><strong>ST Instructional Assistant</strong>, <a href="http://compsci.appstate.edu/">Appalachian State University Computer Science Department</a> <br>
-                    <em>Courses: Introduction to Computer Systems, Software Engineering</em>
+                    <em>Courses: Introduction to Computer Systems, Software Engineering, Client-Side Web Programming</em>
 
                     <ul>
                         <li>Collaborated with course professor to refine assignments to best represent material and appeal to student learning styles</li>
                         <li>Critiqued student submitted material, and provided examples of implemented concepts</li>
                     </ul>
                 </div>
-
             </div>
+            <div class="row">
+                <p class="col-lg-4">June 2016 - August 2016</p>
+                <div class="col-lg-8"><strong>Summer Maintenance Team</strong>, <a href="http://www.universityhighlands.com/">University Highlands Apartments</a> <br>
+                    <ul>
+                        <li>Assisted with the renovation of apartments for the new semester.</li>
+                        <li>Learned new skills sets such as plumbing, electrical, and appliance maintenance. </li>
+                        <li>Perform strongly in the areas of teamwork and time management.</li>
+                        <li>Interface with tenants to assist with their individual needs.</li>
+                    </ul>
+                </div>
+            </div>
+            
         </section>
         <section class="resume-section">
             <h2 class="section-heading">Skills/Proficiencies</h2>
@@ -43,6 +55,7 @@
                     <ul style="list-style-type: none">
                         <li>Windows</li>
                         <li>Linux</li>
+                        <li>OS X</li>
                     </ul>
                 </div>
                 <div class="col-lg-4">
@@ -53,7 +66,10 @@
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>JavaScript</li>
-                        <li>C</li>
+                        <li>PHP</li>
+                        <li>C/C++</li>
+                        <li>Swift</li>
+                        <li>MySQL/SQLite</li>
                     </ul>
                 </div>
                 <div class="col-lg-4">
@@ -64,6 +80,8 @@
                         <li>PyCharm</li>
                         <li>Visual Studio</li>
                         <li>NetBeans</li>
+                        <li>XCode</li>
+                        <li>Unreal Engine</li>
                     </ul>
                 </div>
             </div>
