--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -48,6 +48,25 @@
                 </a>
             </div>
         </div>
+        <div class="row no-gutter">
+            <div class="col-lg-4 col-sm-6">
+                <a href="{{site.baseurl}}/projects/team_sunergy" class="portfolio-box">
+                    <img src="{{site.baseurl}}/img/portfolio/5.jpg" class="img-responsive" alt="Team Sunergy image">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Team Sunergy - Solar Vehicle Racing Team
+                            </div>
+                            <div class="project-name">
+                                C/C++
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            
+        </div>
     </div>
     <div class="container">
         <h2 class="section-heading"><br><br>Scripts</h2>
