Fixed link to Sunergy Pic
Fixed link to Team Sunergy Full Team Picture. jpg needed to be JPG

--- a/_includes/sunergy_post.html
+++ b/_includes/sunergy_post.html
@@ -2,7 +2,7 @@
     <h2>Team Sunergy - Solar Vehicle Racing Team</h2>
     <h4><em>Positions: Electrical Engineer, Lead Telemetry Engineer, Battery/BPS Engineer</em></h4>
     <figure>
-        <img src="{{site.baseurl}}/img/portfolio/sunergy_full_team.jpg" alt="Full Team Picture of Team Sunergy Fall 2016">
+        <img src="{{site.baseurl}}/img/portfolio/sunergy_full_team.JPG" alt="Full Team Picture of Team Sunergy Fall 2016">
         <figcaption>Full team photo of Team Sunergy from team cookout from Fall 2016. The car, Apperion, is also featured. Photo credit: <a href="https://www.instagram.com/appalachiansvt/">appalachiansvt Instagram</a></figcaption>
     </figure>
 
