--- a/_includes/sunergy_post.html
+++ b/_includes/sunergy_post.html
@@ -1,6 +1,6 @@
 <div class="container project-post">
     <h2>Team Sunergy - Solar Vehicle Racing Team</h2>
-    <h4><em>Positions: Electrical Engineer, Lead Telemetry Engineer, Battery/BPS Engineer</em></h4>
+    <h4><em>Positions: Electrical Engineer, Telemetry Engineer, Battery/BPS Engineer</em></h4>
     <figure>
         <img src="{{site.baseurl}}/img/portfolio/sunergy_full_team.JPG" alt="Full Team Picture of Team Sunergy Fall 2016">
         <figcaption>Full team photo of Team Sunergy from team cookout from Fall 2016. The car, Apperion, is also featured. Photo credit: <a href="https://www.instagram.com/appalachiansvt/">appalachiansvt Instagram</a></figcaption>
@@ -35,7 +35,7 @@
         </figure>
     </section>
     <section class="project-post-section telemetry">
-        <h3>Lead Telemetry Enginner</h3>
+        <h3>Telemetry Enginner</h3>
         <p>
             Once the dust had settled on the beautification process (literally), the team allowed individuals to specialize in
             different areas for development on the car. Given my computer science background, I was highly inclined to work on the
