--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -63,6 +63,21 @@
                         </div>
                     </div>
                 </a>
+            </div
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/Bryconc/JA-Social" class="portfolio-box">
+                    <img src="{{site.baseurl}}/img/portfolio/6.jpg" class="img-responsive" alt="Social JA Image">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Social JA
+                            </div>
+                            <div class="project-name">
+                                Django, Python, HTML, CSS w/ Bootstrap
+                            </div>
+                        </div>
+                    </div>
+                </a>
             </div>
 
             
