--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -66,7 +66,7 @@
             </div
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/Bryconc/JA-Social" class="portfolio-box">
-                    <img src="{{site.baseurl}}/img/portfolio/6.jpg" class="img-responsive" alt="Social JA Image">
+                    <img src="{{site.baseurl}}/img/portfolio/6.png" class="img-responsive" alt="Social JA Image">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
