--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                 </a>
-            </div
+            </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/Bryconc/JA-Social" class="portfolio-box">
                     <img src="{{site.baseurl}}/img/portfolio/6.png" class="img-responsive" alt="Social JA Image">
@@ -79,8 +79,6 @@
                     </div>
                 </a>
             </div>
-
-            
         </div>
     </div>
     <div class="container">
