--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,81 +1,85 @@
 <section class="no-padding">
     <div class="container">
         <h2 class="section-heading"><br><br>Projects</h2>
-        <div class="col-lg-4 col-sm-6">
-            <a href="https://github.com/Bryconc/Spotify-Playlist-Sampler" class="portfolio-box">
-                <img src="{{site.baseurl}}/img/portfolio/1.jpg" class="img-responsive" alt="Spotify Playlist Sampler image">
-                <div class="portfolio-box-caption">
-                    <div class="portfolio-box-caption-content">
-                        <div class="project-category text-faded">
-                            Spotify Playlist Sampler
-                        </div>
-                        <div class="project-name">
-                            Python
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-            <a href="https://github.com/Bryconc/Last-Quest-Text-Game" class="portfolio-box">
-                <img src="{{site.baseurl}}/img/portfolio/2.jpg" class="img-responsive" alt="Last Quest Text Game image">
-                <div class="portfolio-box-caption">
-                    <div class="portfolio-box-caption-content">
-                        <div class="project-category text-faded">
-                            Last Quest Text Adventure Game
-                        </div>
-                        <div class="project-name">
-                            Java
+        <div class="row no-gutter">
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/Bryconc/Spotify-Playlist-Sampler" class="portfolio-box">
+                    <img src="{{site.baseurl}}/img/portfolio/1.jpg" class="img-responsive" alt="Spotify Playlist Sampler image">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Spotify Playlist Sampler
+                            </div>
+                            <div class="project-name">
+                                Python
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-            <a href="https://github.com/Bryconc/CaptionMyImage" class="portfolio-box">
-                <img src="{{site.baseurl}}/img/portfolio/4.jpg" class="img-responsive" alt="CaptionMyImage Website image">
-                <div class="portfolio-box-caption">
-                    <div class="portfolio-box-caption-content">
-                        <div class="project-category text-faded">
-                            Caption My Image Web Project
-                        </div>
-                        <div class="project-name">
-                            HTML, CSS, JS, PHP
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="col-lg-4 col-sm-6">
-        <a href="{{site.baseurl}}/projects/team_sunergy" class="portfolio-box">
-            <img src="{{site.baseurl}}/img/portfolio/5.jpg" class="img-responsive" alt="Team Sunergy image">
-            <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                    <div class="project-category text-faded">
-                        Team Sunergy - Solar Vehicle Racing Team
-                    </div>
-                    <div class="project-name">
-                        C/C++
-                    </div>
-                </div>
+                </a>
             </div>
-        </a>
-    </div>
-    <div class="col-lg-4 col-sm-6">
-        <a href="https://github.com/Bryconc/JA-Social" class="portfolio-box">
-            <img src="{{site.baseurl}}/img/portfolio/6.png" class="img-responsive" alt="Social JA Image">
-            <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                    <div class="project-category text-faded">
-                        Social JA
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/Bryconc/Last-Quest-Text-Game" class="portfolio-box">
+                    <img src="{{site.baseurl}}/img/portfolio/2.jpg" class="img-responsive" alt="Last Quest Text Game image">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Last Quest Text Adventure Game
+                            </div>
+                            <div class="project-name">
+                                Java
+                            </div>
+                        </div>
                     </div>
-                    <div class="project-name">
-                        Django, Python, HTML, CSS w/ Bootstrap
-                    </div>
-                </div>
+                </a>
             </div>
-        </a>
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/Bryconc/CaptionMyImage" class="portfolio-box">
+                    <img src="{{site.baseurl}}/img/portfolio/4.jpg" class="img-responsive" alt="CaptionMyImage Website image">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Caption My Image Web Project
+                            </div>
+                            <div class="project-name">
+                                HTML, CSS, JS, PHP
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="{{site.baseurl}}/projects/team_sunergy" class="portfolio-box">
+                    <img src="{{site.baseurl}}/img/portfolio/5.jpg" class="img-responsive" alt="Team Sunergy image">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Team Sunergy - Solar Vehicle Racing Team
+                            </div>
+                            <div class="project-name">
+                                C/C++
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/Bryconc/JA-Social" class="portfolio-box">
+                    <img src="{{site.baseurl}}/img/portfolio/6.png" class="img-responsive" alt="Social JA Image">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Social JA
+                            </div>
+                            <div class="project-name">
+                                Django, Python, HTML, CSS w/ Bootstrap
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+
+        </div>
     </div>
     <div class="container">
         <h2 class="section-heading"><br><br>Scripts</h2>
