--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -12,7 +12,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-xs-4 text-center">
-                <a href="mailto:bcarpenter1994@hotmail.com">
+                <a href="mailto:bryconc@gmail.com">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                 </a>
             </div>
