Ashley Madison and Last Lecture Blog Posts
Upload my two latest blog posts: Relections on the Ashley Madison
discussions and the Last Lecture video presentation.

--- a/css/post.css
+++ b/css/post.css
@@ -37,3 +37,9 @@
 .post_preview th, .post_preview td {
     text-align: center;
 }
+
+.youtubeVideo {
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
